--- a/src/scss/contacts/common/_map/_map.scss
+++ b/src/scss/contacts/common/_map/_map.scss
@@ -6,6 +6,6 @@
         min-height: 472px;
         border-radius: 26px;
         overflow: hidden;
-        background-color: aqua;
+        background-color: #ffffff;
     }
 }
