--- a/src/scss/header/phone/_decorate/_decorate.scss
+++ b/src/scss/header/phone/_decorate/_decorate.scss
@@ -2,6 +2,7 @@
     .header{
         &__decorate{
             width: calc(100%);
+            border: 0px;
             transform: translateY(38px);
         }
     }
