--- a/src/scss/hero/laptop/_new-tooth/_img/_img.scss
+++ b/src/scss/hero/laptop/_new-tooth/_img/_img.scss
@@ -1,8 +1,9 @@
-@media (max-width: 1366px) {
+@media (max-width: 1406px) {
     .hero{
         &__img-jaw{
+          &--item{
             width: 254px;
-            height: 228px;
+          }
         }
     }
 }
