--- a/src/scss/feedbacks/feedbacks.scss
+++ b/src/scss/feedbacks/feedbacks.scss
@@ -1,6 +1,18 @@
 //Desktop
-@use './common/_title/_text.scss';
-@use './common/_title/_title.scss';
+@use './common/_title/_text.scss' as *;
+@use './common/_title/_title.scss' as *;
+@use './common/_img/_img.scss' as *;
+@use './common/review-block/_block.scss' as *;
+@use './common/_info-block/_block.scss' as *;
+@use './common/_info-block/_decorate/decorate.scss' as *;
+@use './common/_info-block/_flags/_flags.scss' as *;
+@use './common/_info-block/_text/_text.scss' as *;
+
+// Phone
+@use './phone/_title/_title.scss' as *;
+@use './phone/_title/_text.scss' as *;
+@use './phone/_nav/_nav.scss' as *;
+
 
 .feedbacks{
     background-color: rgba(180, 227, 195, 1);
@@ -9,6 +21,56 @@
         display: flex;
         flex-direction: column;
         align-items: center;
+        margin-top: 50px;
         margin-bottom: 71px;
+        gap: 44px;
+        max-width: 100%;
     }
+
+  &__reviews{
+    display: flex;
+    gap: 18px;
+    justify-content: center;
+  }
+}
+
+@media (max-width: 1188px) {
+  .feedbacks{
+    &__reviews{
+      overflow-x: scroll;
+      scrollbar-width: none;
+      display: flex;
+      width: auto;
+      justify-content: flex-start;
+
+      &:nth-child(1){
+        padding-left: 16px;
+      }
+
+      &:nth-child(3){
+        padding-right: 16px;
+      }
+
+      &--items{
+        overflow-x: hidden;
+        width: calc(100dvw - 32px);
+      }
+    }
+  }
+}
+
+@media (max-width: 788px) {
+  .feedbacks{
+    &__content{gap: 18px; margin-bottom: 32px}
+  }
+}
+
+@media (max-width: 500px) {
+  .feedbacks{
+    &__reviews{
+      &--items{
+        width: 100dvw;
+      }
+    }
+  }
 }
