--- a/src/scss/header/common/_contacts/_btn-request/_btn-request.scss
+++ b/src/scss/header/common/_contacts/_btn-request/_btn-request.scss
@@ -17,7 +17,8 @@
         background-color: rgba($color: #000000, $alpha: 0.0);
 
         &:hover{
-            border: 1px solid map.get($colors, secondary);
+            border: 1px solid rgba(30, 134, 62, 1);
+            color: rgba(30, 134, 62, 1);
         }
 
         &:active{
