--- a/src/scss/header/common/_decorate/_decorate.scss
+++ b/src/scss/header/common/_decorate/_decorate.scss
@@ -1,7 +1,10 @@
 .header{
     &__decorate{
         position: absolute;
-        width: calc(100% - 39px);
+        border: 20px solid white;
+        border-top: 1px;
+        border-bottom: 0px;
+        width: 100%;
         display: flex;
         justify-content: space-between;
         background-color: rgba(0, 0, 255, 0);
