--- a/src/scss/header/headMobile.scss
+++ b/src/scss/header/headMobile.scss
@@ -1,20 +1,22 @@
+
+
 .header{
     &__head-mobile{
         position: absolute;
         width: 314px;
         height: calc(100dvh - 60px);
         top: 60px;
-        right: 0px;
+        right: -314px;
         background-color: white;
         border-top-left-radius: 16px;
         border-bottom-left-radius: 16px;
         box-shadow: 0px 6px 16px 0px rgba(0, 0, 0, 0.15);
         padding: 38px 16px 117px 16px;
-        transform: translateX(314px);
+        //transform: translateX(314px);
         transition: transform 0.3s ease-in-out;
 
         &.active{
-            transform: translateX(0);
+            transform: translateX(-314px);
         }
 
         & .header__nav{
@@ -51,6 +53,9 @@
             height: 46px;
             padding: 10px;
             font-size: 16px;
+          &--a{
+            width: 100%;
+          }
         }
     }
 }
