--- a/src/scss/hero/common/_doctor/_text/_text.scss
+++ b/src/scss/hero/common/_doctor/_text/_text.scss
@@ -1,5 +1,6 @@
 @use '../../../../mixins/colors.scss';
 @use '../../../../mixins/fonts.scss';
+@use '../../../../mixins/animations.scss';
 @use 'sass:map';
 
 .hero{
@@ -12,6 +13,7 @@
         position: absolute;
         top: -22px;
         right: -130px;
+      @include  animations.departRight(0.3s)
     }
 
     &__doctor-surname{
@@ -60,10 +62,26 @@
         border-radius: 16px;
         align-items: center;
         width: fit-content;
+
+        &:nth-of-type(1){
+          @include  animations.departRight(0.5s)
+        }
+        &:nth-of-type(2){
+          @include  animations.departRight(0.9s)
+        }
+        &:nth-of-type(3){
+           @include  animations.departRight(1.1s)
+        }
+
+        &:nth-of-type(4){
+          @include  animations.departRight(1.3s)
+        }
+
     }
 
     &__doctor-info--text_white{
         @include fonts.Noto-sans(14px, 600, 100%, -0.5px);
         color: rgba(255, 255, 255, 1);
+      @include  animations.departRight(0.7s)
     }
 }
