--- a/src/scss/hero/common/_new-tooth/_img/_img.scss
+++ b/src/scss/hero/common/_new-tooth/_img/_img.scss
@@ -1,6 +1,49 @@
 .hero{
     &__img-jaw{
+        display: flex;
+      flex-direction: column;
+      align-items: center;
+
+      &--item{
         width: 311px;
-        height: 278px;
+        height: auto;
+        transform: translateY(-600px);
+      }
     }
+}
+
+@keyframes jaw_down {
+  0%{
+    transform: translateY(-600px);
+  }
+
+  90%{
+    transform: translateY(10px);
+  }
+
+  100%{
+    transform: translateY(0px);
+  }
+}
+
+@keyframes jaw_pulse {
+  0%{
+    transform: translateY(0px);
+  }
+  10%{
+    transform: translateY(10px);
+  }
+  20%{
+    transform: translateY(0px);
+  }
+  30%{
+    transform: translateY(10px);
+  }
+  40%{
+    transform: translateY(0px);
+  }
+  100%{
+    transform: translateY(0px);
+  }
+
 }
