--- a/src/scss/header/common/_header/_header.scss
+++ b/src/scss/header/common/_header/_header.scss
@@ -2,6 +2,7 @@
     position: fixed;
     top: 0px;
     width: 100%;
+    max-width: 100dvw;
     height: auto;
     display: flex;
     justify-content: center;
