--- a/src/scss/contacts/common/_text/_text.scss
+++ b/src/scss/contacts/common/_text/_text.scss
@@ -26,6 +26,8 @@
             @include fonts.Noto-sans(32px, 500, 40px, 0px);
             color: rgba(255, 255, 255, 1);
             text-align: right;
+            -webkit-tap-highlight-color: transparent;
+            outline: none
         }
     }
 
