--- a/src/scss/hero/common/_doctor/_text/_text.scss
+++ b/src/scss/hero/common/_doctor/_text/_text.scss
@@ -57,6 +57,7 @@
         display: flex;
         gap: 4px;
         padding: 6px;
+        padding-right: 16px;
         background-color: rgba(255, 255, 255, 1);
         box-shadow: 0px 6px 16px 0px rgba(0, 0, 0, 0.15);
         border-radius: 16px;
