--- a/src/scss/footer/footer.scss
+++ b/src/scss/footer/footer.scss
@@ -2,6 +2,7 @@
 @use './common/_nav/_btn/btn' as *;
 @use './common/_btn/btn' as *;
 @use './common/_text/text' as *;
+@use './common/_row/row';
 
 .footer{
     background-color: rgba(30, 134, 62, 1);
