--- a/src/scss/feedbacks/common/_img/_img.scss
+++ b/src/scss/feedbacks/common/_img/_img.scss
@@ -1,3 +1,6 @@
+@use '../../../mixins/fonts.scss';
+
+
 .feedbacks{
   &__img-block {
     display: grid;
@@ -15,8 +18,96 @@
   }
   &__img{
     border-radius: 16px;
-    &:nth-child(1){grid-area: img1; width: 100%; height: 100%}
-    &:nth-child(2){grid-area: img2; width: 100%; height: 100%}
-    &:nth-child(3){grid-area: img3; width: 100%; height: 100%}
+    position: relative;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    overflow: hidden;
+    cursor: pointer;
+    outline: none;
+    -webkit-tap-highlight-color: transparent;
+
+    &:nth-child(1){
+      grid-area: img1; 
+      width: 100%; 
+      height: 100%
+    }
+
+    &:nth-child(2){
+      grid-area: img2; 
+      width: 100%; 
+      height: 100%
+    }
+
+    &:nth-child(3){
+      grid-area: img3; 
+      width: 100%; 
+      height: 100%
+    }
+
+    &--text{
+      @include fonts.Noto-sans(22px, 500, 24px, 0em);
+      color: rgba(217, 217, 217, 1);
+      position: absolute;
+      align-self: end;
+      margin-bottom: 6px;
+      z-index: 2;
+    }
+
+    & img{
+      z-index: 2;
+    }
+
+    &--blur{
+      backdrop-filter: blur(2px);
+      position: absolute;
+      min-width: 100%;
+      min-height: 100%;
+      z-index: 1;
+      border-radius: 16px;
+    }
+
+    &.active{
+      & img{
+        z-index: 2;
+        display: none;
+      }
+
+      & .feedbacks__img--blur{
+        display: none;
+      }
+    }
+  }
+
+  &__img-before{
+    background-position: center center;
+    background-repeat: no-repeat;
+    background-size: contain;
+    &1{
+      background-image: url("../../../../assets/images/feedbacks/mariaBefore.png");
+    }
+    &2{
+      background-image: url("../../../../assets/images/feedbacks/nikolayBefore.png");
+      background-size: cover;
+    }
+    &3{
+      background-image: url('../../../../assets/images/feedbacks/alekseyBefore.png');
+    }
+  }
+
+  &__img-after{
+    background-position: center center;
+    background-repeat: no-repeat;
+    background-size: contain;
+    &1{
+      background-image: url("../../../../assets/images/feedbacks/mariaAfter.png");
+    }
+    &2{
+      background-image: url("../../../../assets/images/feedbacks/nikolayAfter.png");
+      background-size: cover;
+    }
+    &3{
+      background-image: url('../../../../assets/images/feedbacks/alekseyAfter.png');
+    }
   }
 }
