--- a/src/scss/feedbacks/common/review-block/_block.scss
+++ b/src/scss/feedbacks/common/review-block/_block.scss
@@ -7,5 +7,11 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
+
+    &:nth-of-type(2){
+      & .feedbacks__info-text{
+        margin-bottom: 8px;
+      }
+    }
   }
 }
