--- a/src/scss/quiz/common/_title-block/_text/_text.scss
+++ b/src/scss/quiz/common/_title-block/_text/_text.scss
@@ -7,12 +7,10 @@
         &--text{
             @include fonts.Noto-sans(48px, 600, 40px, -4px);
             color: map.get(colors.$colors, secondary);
-
-            &_small{
-                font-size: 32px;
-                font-weight: 500;
-                letter-spacing: 0px;
-            }
+            hyphens: none;
+            word-break: break-all;
+            overflow-wrap: normal;
+            white-space: nowrap;
 
             &_white{
                 font-size: 29px;
@@ -23,6 +21,7 @@
                 background-color: map.get(colors.$colors, white);
                 border-radius: 16px;
                 padding: 10px;
+                margin-top: 6px;
             }
 
             &_green{
